[gd_scene load_steps=2 format=2]

[ext_resource path="res://tests/ParseJSONPaths.gd" type="Script" id=1]

[node name="ParseJSONPaths" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 944.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 115.0
margin_bottom = 17.0
text = "Simulate system: "

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 203.0
margin_bottom = 20.0
text = "windows"
items = [ "windows", null, false, 0, null, "macos", null, false, 1, null, "linux", null, false, 2, null ]
selected = 0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 207.0
margin_right = 260.0
margin_bottom = 20.0
text = "Dew it"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 944.0
margin_bottom = 520.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 467.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 467.0
margin_bottom = 14.0
text = "Raw JSON:"

[node name="RawJSON" type="TextEdit" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 467.0
margin_bottom = 496.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 477.0
margin_right = 944.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 467.0
margin_bottom = 14.0
text = "Edited JSON:"

[node name="EditedJSON" type="TextEdit" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 18.0
margin_right = 467.0
margin_bottom = 496.0
size_flags_vertical = 3
readonly = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
